# deepnetrust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
DeepNet_CS/: DeepNet_CS.sln
DeepNet_CS/DeepNet_CS/: DeepNet.cs  DeepNet_CS.csproj  Program.cs
benches/: my_benchmark.rs
src/: main.rs
