[package]
name = "deepnetrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[profile.dev]
# Turn on a small amount of optimisation in development mode.
opt-level = 1

[profile.release]
lto = true
incremental = true
panic = "abort"
codegen-units = 1
debug = 1
opt-level = 3